add some bullet points in coclusion

--- a/lec1/cocotb.tex
+++ b/lec1/cocotb.tex
@@ -651,6 +651,16 @@ class TestBench :
   The cocotb community collects all materials on cocotb available on internet: 
   {\color{blue} https://github.com/cocotb/cocotb/wiki/Further-Resources} \\
   There is a complete list of extension modules, lots of links to custom libraries and examples, youtube lectures and streams, etc. 
+
+   \begin{exampleblock}{More topics might be covered}
+     \begin{itemize}
+      \item More complex examples from real projects. 
+      \item Basics of verification theory: constrained random testing, functional coverage, etc. 
+      \item Testbenching tools for reusable bus interfaces : cocotb-bus. 
+      \item Other open-source tools for FPGA development and verification: ghdl, Yosys, X-Ray project, OSVWM.
+     \end{itemize}
+     
+   \end{exampleblock}
     
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
