--- a/lec1/cocotb.tex
+++ b/lec1/cocotb.tex
@@ -157,9 +157,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{\secname}
   \begin{itemize}
-    \item Physics group -- know what kind of output they need from the electronics, know physics, 
+    \item Physics group -- they know what kind of output they need from the electronics, know physics, 
       don't know technical details, don't know HDL, most likely know python
-    \item Electronics group -- know all details of the electronics, don't have proficiency in data analysis
+    \item Electronics group -- they know all details of the electronics, don't have proficiency in data analysis
   \end{itemize}
    \begin{columns}
      \begin{column}{0.5\textwidth}
@@ -180,7 +180,7 @@
          \begin{itemize}
            \item Probably don't know all the aspects of the electronics application. 
            \item Know everything about details of the logic implementation. 
-           \item Have their osciloscopes and pulse generators for the basic testing. 
+           \item Have their oscilloscopes and pulse generators for the basic testing. 
            \item Most likely know python. 
          \end{itemize}
          
@@ -189,7 +189,7 @@
      \end{column}
    \end{columns}
     
-   There is verification engineers in big companies and big experiments, but smaller groups usually have very limited manpower. Cocotb makes it possible to bring more people into firmware verification: students, software experts, physicists. 
+   There are  verification engineers in big companies and big experiments, but smaller groups usually have very limited manpower. Cocotb makes it possible to bring more people into firmware verification: students, software experts, physicists. 
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
